Bug 511039 - Screencast of rectangular region selection is downscaled when screen scaling is used
Summary: Screencast of rectangular region selection is downscaled when screen scaling ...
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.4.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 488233 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-10-24 18:28 UTC by Błażej Szczygieł
Modified: 2026-01-26 13:47 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Błażej Szczygieł 2025-10-24 18:28:48 UTC
SUMMARY
Screencast of rectangular region selection is downscaled/blurred when screen scaling is used.

STEPS TO REPRODUCE
1. Use screen scaling e.g. 200% 
2. Launch screen-cast software (WebRTC in Firefox, OBS, ...)
3. Select "Rectangular Region" in "Screen Sharing" window

OBSERVED RESULT
Image is downscaled and blurred (e.g 3840x2160 with 200% is downscaled to 1920x1080)

EXPECTED RESULT
Larger and sharp (not downscaled) image as in other modes in "Screen Sharing" window

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Comment 1 Bug Janitor Service 2025-10-29 15:14:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/451
Comment 2 David Redondo 2025-10-30 15:29:05 UTC
Git commit 647a66f968e36fc6ecfcf0a738eb138ff9e8d988 by David Redondo.
Committed on 30/10/2025 at 15:22.
Pushed by davidre into branch 'master'.

screencasting: Let the compositor pick the scale of a region stream

This way we will get always a correctly scaled stream.
FIXED-IN:6.4.6

M  +1    -1    src/waylandintegration.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/647a66f968e36fc6ecfcf0a738eb138ff9e8d988
Comment 3 David Redondo 2025-10-30 15:36:17 UTC
Git commit 22820238459c45226dced1872fe2cba181e4cb8b by David Redondo.
Committed on 30/10/2025 at 15:29.
Pushed by davidre into branch 'Plasma/6.5'.

screencasting: Let the compositor pick the scale of a region stream

This way we will get always a correctly scaled stream.
FIXED-IN:6.4.6


(cherry picked from commit 647a66f968e36fc6ecfcf0a738eb138ff9e8d988)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +1    -1    src/waylandintegration.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/22820238459c45226dced1872fe2cba181e4cb8b
Comment 4 Nate Graham 2025-10-30 20:35:46 UTC
*** Bug 488233 has been marked as a duplicate of this bug. ***
Comment 5 David Redondo 2025-10-31 08:11:59 UTC
Git commit 489cb22e993dd6c67d4c7bd82c4abb4ca7104add by David Redondo.
Committed on 30/10/2025 at 15:53.
Pushed by davidre into branch 'Plasma/6.4'.

screencasting: Let the compositor pick the scale of a region stream

This way we will get always a correctly scaled stream.
FIXED-IN:6.4.6


(cherry picked from commit 647a66f968e36fc6ecfcf0a738eb138ff9e8d988)

Co-authored-by: David Redondo <kde@david-redondo.de>

(cherry picked from commit 22820238459c45226dced1872fe2cba181e4cb8b)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +1    -1    src/waylandintegration.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/489cb22e993dd6c67d4c7bd82c4abb4ca7104add
Comment 6 lostfreeman 2026-01-25 21:32:28 UTC
I am on 6.5.5 (frameworks 6.20.0) and the issue is still present. Is it going to be fixed in 6.5.6 (e.g. haven't been ported forward yet)?
Comment 7 Harald Sitter 2026-01-26 13:47:31 UTC
Please file a new bug report.