screencasting: Let the compositor pick the scale of a region stream

This way we will get always a correctly scaled stream.
BUG:511039
FIXED-IN:6.4.6


(cherry picked from commit 647a66f968e36fc6ecfcf0a738eb138ff9e8d988)

Co-authored-by: David Redondo <kde@david-redondo.de>

(cherry picked from commit 22820238459c45226dced1872fe2cba181e4cb8b)

Co-authored-by: David Redondo <kde@david-redondo.de>